@@ -1,4 +1,5 @@
-OpenVi 7.0.15 -> OpenVi 7.1.16: Tue Mar 1 04:20:19 2022
+OpenVi 7.0.15 -> OpenVi 7.1.16: Tue Mar 1 16:05:08 2022
+        + Switch `vfork` to `fork` as `vfork` is now gone from POSIX.1-2008
         + Add `scripts/install-sh`, portable BSD `install(1)` using POSIX `sh`
         + Clear pointer after ending screen for safety
         + Documentation / man page improvements and minor corrections
